# ErisPulse-ServerStatusMonitor

./: LICENSE  README.md  pyproject.toml
ServerStatusMonitor/: Core.py  __init__.py
tools/: build.py
